--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "@rails/webpacker": "4.3.0",
     "turbolinks": "^5.2.0"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "@prettier/plugin-ruby": "^2.0.0"
+  }
 }
